--- a/style.css
+++ b/style.css
@@ -1,1 +1,201 @@
-this is my css file
+@font-face
+{
+  font-family: Roboto;
+  src: url(rsschool-cv\assets\fonts\Roboto-Regular.ttf)
+}
+*
+{
+  box-sizing: border-box;
+}
+
+body
+{
+  font-family: "Roboto", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #4d2323;
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+header
+{
+  background-color: #68806b;
+}
+@media (min-width: 1150px)
+{
+  /*add later*/
+}
+.container
+{
+  max-width: 1440px;
+  margin: 0 auto;
+}
+.nav-name
+{
+  font-size: 25px;
+  color: #b2ceb6;
+  font-weight: 300;
+  letter-spacing: 10px;
+  margin: 0 auto;
+}
+
+.nav-list
+{
+  display: flex;
+  align-items: center;
+  list-style: none;
+  flex-wrap: wrap;
+}
+
+.nav-link,.nav-link:visited,.footer-contents
+{
+  font-size: 20px;
+  margin: 0 20px;
+  color: #292e2a;
+  transition: 0.5s;
+  text-decoration: none;
+}
+
+#footer-link
+{
+  margin: 0 1px;
+
+}
+
+.nav-link:hover
+{
+  color:#b2ceb6;
+  text-decoration-line: underline;
+}
+
+
+main
+{
+  border: 1px solid red;
+  height: 50px;
+}
+footer
+{
+  display: flex;
+  background-color: #68806b;
+  align-items: center;
+  justify-content: space-between;
+}
+.footer-contents
+{
+  padding: 0 10%;
+  margin: 20px;
+}
+
+.rss-link
+{
+  display: block;
+  width: 121px;
+  height: 45px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-image: url(./assets/svg/rss.svg);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* html {
+  scroll-behavior: smooth;
+}
+@font-face {
+  font-family: Roboto;
+  src: url("rsschool-cv\assets\fonts\Roboto-Regular.ttf");
+}
+@media (max-width: 768px) {
+  .section {
+    width: 100%;
+  }
+}
+* {
+  box-sizing: border-box;
+}
+body {
+  font-family: "Roboto", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #4d2323;
+
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.main {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.header {
+  background-color: #68806b;
+}
+
+.section {
+  width: 50%;
+}
+
+.section-title {
+  font-size: 20px;
+  font-weight: 400;
+  text-transform: uppercase;
+  letter-spacing: 5px;
+  color: #829985;
+}
+
+.container {
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+.nav-list {
+  font-size: 18px;
+  display: flex;
+  list-style: none;
+  align-items: center;
+  justify-content: end;
+}
+.nav-name {
+  margin: 0;
+  font-size: x-large;
+  color: #b2ceb6;
+  font-weight: 300;
+}
+
+
+.nav-link {
+  margin: 20px;
+  transition: 0.3s;
+  text-decoration: none;
+  color: #292e2a;
+}
+.nav-link:hover {
+  color: #b2ceb6;
+  text-decoration: underline;
+} */
