--- a/style.css
+++ b/style.css
@@ -1,15 +1,12 @@
-@font-face
-{
+@font-face {
   font-family: Roboto;
-  src: url(rsschool-cv\assets\fonts\Roboto-Regular.ttf)
+  src: url(rsschool-cv\assets\fonts\Roboto-Regular.ttf);
 }
-*
-{
+* {
   box-sizing: border-box;
 }
 
-body
-{
+body {
   font-family: "Roboto", sans-serif;
   font-size: 18px;
   font-weight: 400;
@@ -21,23 +18,18 @@ body
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
 }
 
-header
-{
+header {
   background-color: #68806b;
+  width: 100%;
 }
-@media (min-width: 1150px)
-{
+@media (min-width: 1150px) {
   /*add later*/
 }
-.container
-{
-  max-width: 1440px;
-  margin: 0 auto;
-}
-.nav-name
-{
+
+.nav-name {
   font-size: 25px;
   color: #b2ceb6;
   font-weight: 300;
@@ -45,16 +37,18 @@ header
   margin: 0 auto;
 }
 
-.nav-list
-{
+.nav-list {
   display: flex;
   align-items: center;
   list-style: none;
   flex-wrap: wrap;
+
+
 }
 
-.nav-link,.nav-link:visited,.footer-contents
-{
+.nav-link,
+.nav-link:visited,
+.footer-contents {
   font-size: 20px;
   margin: 0 20px;
   color: #292e2a;
@@ -62,39 +56,156 @@ header
   text-decoration: none;
 }
 
-#footer-link
-{
+#footer-link {
   margin: 0 1px;
-
 }
 
-.nav-link:hover
-{
-  color:#b2ceb6;
+.nav-link:hover {
+  color: #b2ceb6;
   text-decoration-line: underline;
 }
 
-
-main
-{
-  border: 1px solid red;
-  height: 50px;
-}
-footer
-{
+main {
   display: flex;
-  background-color: #68806b;
-  align-items: center;
-  justify-content: space-between;
+  flex-direction: column;
+  margin: 0 20px;
 }
-.footer-contents
+
+.contact_li
 {
-  padding: 0 10%;
+  font-size: 18px;
+  margin: 5px 0;
+
+}
+
+.contact_a
+{
+  text-decoration: none;
+  color:#68806b;
+  transition: 0.5s;
+}
+
+.contact_a:hover
+{
+  color: #4d2323;
+}
+
+
+.container {
+  max-width: 1440px;
+  padding: 10px;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.div_m {
+  width: calc(50% - 20px);
+  padding: 10px;
+  margin: 0 10px;
+  padding-bottom: 30px;
+  border-bottom: 2px solid #4d2323;
+}
+
+#div_sum
+{
+  width: 100%;
+}
+
+.main_h {
+  align-items: center;
+  font-variant: small-caps;
+  letter-spacing: 1px;
+  color: #68806b;
+}
+
+#name {
+  display: flex;
+  justify-content: center;
+  padding: 0;
+  margin-bottom: 20px;
+  color: #4d2323;
+  font-size: 32px;
+  font-weight: 300;
+  letter-spacing: 10px;
+  line-height: 50px;
+  word-spacing: 3px;
+  border-bottom: 2px solid #b2ceb6;
+}
+
+.text {
+}
+
+#pic_contacts-section
+{
+  border-bottom: 5px solid #d7d1c9;
+  padding-bottom: 0px;
+  align-items: center;
+}
+
+#profile-pic
+{
+  height: 300px;
+  width: 300px;
+
+}
+
+#pic-div
+{
+  border-bottom: 0;
+  padding-bottom: 0;
+}
+
+#contacts-div
+{
+  border-bottom: 0;
+  padding-bottom: 0;
+}
+
+#code
+{
+  width: 40%;
+}
+
+#summary
+{
+  padding: 0 auto;
+  margin: 0;
+}
+
+#summary_text
+{
+  padding: 0;
+  margin: 0;
+
+}
+
+#projects-div
+{
+  border-bottom: 0;
+  padding-bottom: 0;
+}
+
+#english-div
+{
+  border-bottom: 0;
+  padding-bottom: 0;
+
+}
+
+
+footer {
+  display: flex;
+  width: 100%;
+  background-color: #68806b;
+  justify-content: space-between;
+  align-items: center;
+}
+.footer-contents {
+  padding: 0 20%;
   margin: 20px;
 }
 
-.rss-link
-{
+.rss-link {
   display: block;
   width: 121px;
   height: 45px;
@@ -102,100 +213,3 @@ footer
   background-size: contain;
   background-image: url(./assets/svg/rss.svg);
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* html {
-  scroll-behavior: smooth;
-}
-@font-face {
-  font-family: Roboto;
-  src: url("rsschool-cv\assets\fonts\Roboto-Regular.ttf");
-}
-@media (max-width: 768px) {
-  .section {
-    width: 100%;
-  }
-}
-* {
-  box-sizing: border-box;
-}
-body {
-  font-family: "Roboto", sans-serif;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 1.5;
-  color: #4d2323;
-
-  min-height: 100vh;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-.main {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.header {
-  background-color: #68806b;
-}
-
-.section {
-  width: 50%;
-}
-
-.section-title {
-  font-size: 20px;
-  font-weight: 400;
-  text-transform: uppercase;
-  letter-spacing: 5px;
-  color: #829985;
-}
-
-.container {
-  max-width: 1440px;
-  margin: 0 auto;
-  padding: 0 20px;
-}
-
-.nav-list {
-  font-size: 18px;
-  display: flex;
-  list-style: none;
-  align-items: center;
-  justify-content: end;
-}
-.nav-name {
-  margin: 0;
-  font-size: x-large;
-  color: #b2ceb6;
-  font-weight: 300;
-}
-
-
-.nav-link {
-  margin: 20px;
-  transition: 0.3s;
-  text-decoration: none;
-  color: #292e2a;
-}
-.nav-link:hover {
-  color: #b2ceb6;
-  text-decoration: underline;
-} */
